Update inline question

--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -420,7 +420,7 @@
     "### Inline Question 1:\n",
     "It is possible that once in a while a dimension in the gradcheck will not match exactly. What could such a discrepancy be caused by? Is it a reason for concern? What is a simple example in one dimension where a gradient check could fail? *Hint: the SVM loss function is not strictly speaking differentiable*\n",
     "\n",
-    "**Your Answer:** The discrepancy in the loss between numerical and analytical evaluation of the gradient is probably due to the '> 0' check within the loss function. The analytical evaluation handles this cleanly via an if check of the value of the margin, whereas the numerical evaluation determines the loss via getting a slope of loss at points with small delta. However, if that delta ever crosses the svm threshold, the dramatic change in gradient won't be handled appropriately in the numerical case."
+    "**Your Answer:** The discrepancy in the loss between numerical and analytical evaluation of the gradient is probably due to the max(0, y) function within the loss function, also known as the threshold. The analytical evaluation handles this cleanly via an if check of the value of the margin, whereas the numerical evaluation determines the loss via getting a slope of loss at points with small delta. However, if that delta ever crosses the threshold, the dramatic change in gradient won't be handled appropriately in the numerical case."
    ]
   },
   {
