Update svm jupyter notebook

--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -420,14 +420,40 @@
     "### Inline Question 1:\n",
     "It is possible that once in a while a dimension in the gradcheck will not match exactly. What could such a discrepancy be caused by? Is it a reason for concern? What is a simple example in one dimension where a gradient check could fail? *Hint: the SVM loss function is not strictly speaking differentiable*\n",
     "\n",
-    "**Your Answer:** The discrepancy in the loss between numerical and analytical evaluation of the gradient is probably due to the max(0, y) function within the loss function, also known as the threshold. The analytical evaluation handles this cleanly via an if check of the value of the margin, whereas the numerical evaluation determines the loss via getting a slope of loss at points with small delta. However, if that delta ever crosses the threshold, the dramatic change in gradient won't be handled appropriately in the numerical case."
+    "**Your Answer:** The discrepancy in the loss between numerical and analytical evaluation of the gradient is probably due to the max(0, y) function within the loss function, also known as the threshold. The analytical evaluation handles this cleanly via an if check of the value of the margin, whereas the numerical evaluation determines the loss via getting a slope of loss at points with small delta. However, if that delta ever crosses the threshold, the discontinuous change in gradient won't be handled appropriately in the numerical case."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss: 9.013725e+00 computed in 0.096245s\n",
+      "s [[ 1. -1.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.  1.  1.  1.  1. -1.]\n",
+      " [ 1.  1.  1.  1.  1.  0. -1.  1.  0.  1.]\n",
+      " [ 1.  1.  1.  1.  1.  1.  1.  1.  1. -1.]\n",
+      " [ 1.  1.  1.  1.  1.  1.  1.  1.  1. -1.]]\n",
+      "dW (3073, 10)\n",
+      "in dW [[ -3.16991049  -1.20641004   4.05800894   1.09045478   6.93973857\n",
+      "    2.19618441   3.258752     1.47690061  -7.59574755  -5.27480216]\n",
+      " [ -5.53669367  -1.82204531   2.96577204   1.35810082   5.70606429\n",
+      "    2.74839306   4.21832      0.02642959 -10.84703163  -5.79735122]\n",
+      " [ -7.13114359  -1.54407363   5.51066555   0.92013502   8.53908286\n",
+      "    3.78855233   7.072448    -1.04639551 -15.64848204  -6.74808253]\n",
+      " [ -2.98667147  -0.53655012   3.04400682   0.65100433   7.72511571\n",
+      "    1.98811322   2.648336     0.19800184  -7.67754265  -4.84866649]\n",
+      " [ -5.7676582   -1.17390318   1.75157722   0.86731249   6.39200857\n",
+      "    2.64174384   3.011136    -1.38095224 -11.26910898  -5.88312873]]\n",
+      "Vectorized loss: 9.013725e+00 computed in 0.007496s\n",
+      "difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Next implement the function svm_loss_vectorized; for now only compute the loss;\n",
     "# we will implement the gradient in a moment.\n",
@@ -448,9 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss and gradient: computed in 0.106670s\n",
+      "Vectorized loss and gradient: computed in 0.004552s\n",
+      "difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of svm_loss_vectorized, and compute the gradient\n",
     "# of the loss function in a vectorized way.\n",
