WIP for softmax naive gradient

--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -154,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.361959\n",
+      "loss: 2.313118\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -188,16 +188,43 @@
    "metadata": {},
    "source": [
     "## Inline Question 1:\n",
-    "Why do we expect our loss to be close to -log(0.1)? Explain briefly.**\n",
+    "**Why do we expect our loss to be close to -log(0.1)? Explain briefly.**\n",
     "\n",
-    "**Your answer:** This is because the softmax loss function outputs the approximate probability of the outcome\n"
+    "**Your answer:** This is because the softmax loss function outputs the approximate probability of the outcome of the label scores over all scores. If the weights are random, it should be equivalent to picking 1 out of 10 at random.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: -0.114703 analytic: -10.589114, relative error: 9.785679e-01\n",
+      "numerical: -1.404885 analytic: -10.589114, relative error: 7.657354e-01\n",
+      "numerical: -2.483817 analytic: -10.589114, relative error: 6.200061e-01\n",
+      "numerical: 0.886709 analytic: -10.589114, relative error: 1.000000e+00\n",
+      "numerical: 0.679301 analytic: -10.589114, relative error: 1.000000e+00\n",
+      "numerical: 1.606436 analytic: -10.589114, relative error: 1.000000e+00\n",
+      "numerical: -0.836461 analytic: -10.589114, relative error: 8.535809e-01\n",
+      "numerical: 0.748770 analytic: -10.589114, relative error: 1.000000e+00\n",
+      "numerical: 0.985442 analytic: -10.589114, relative error: 1.000000e+00\n",
+      "numerical: 0.504513 analytic: -10.589114, relative error: 1.000000e+00\n",
+      "numerical: -1.531485 analytic: -10.586793, relative error: 7.472438e-01\n",
+      "numerical: -0.759492 analytic: -10.587567, relative error: 8.661341e-01\n",
+      "numerical: 0.204135 analytic: -10.582394, relative error: 1.000000e+00\n",
+      "numerical: 1.492809 analytic: -10.598859, relative error: 1.000000e+00\n",
+      "numerical: 0.828553 analytic: -10.583258, relative error: 1.000000e+00\n",
+      "numerical: -0.394561 analytic: -10.569631, relative error: 9.280274e-01\n",
+      "numerical: -0.309265 analytic: -10.579253, relative error: 9.431944e-01\n",
+      "numerical: -0.386979 analytic: -10.607534, relative error: 9.296051e-01\n",
+      "numerical: -2.135942 analytic: -10.592287, relative error: 6.643772e-01\n",
+      "numerical: -0.206158 analytic: -10.599564, relative error: 9.618428e-01\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
