--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -20,28 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "data": {
-      "application/javascript": [
-       "if (!(\"Notification\" in window)) {\n",
-       "    alert(\"This browser does not support desktop notifications, so the %%notify magic will not work.\");\n",
-       "} else if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {\n",
-       "    Notification.requestPermission(function (permission) {\n",
-       "        if(!('permission' in Notification)) {\n",
-       "            Notification.permission = permission;\n",
-       "        }\n",
-       "    })\n",
-       "}\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The jupyternotify extension is already loaded. To reload it, use:\n",
+      "  %reload_ext jupyternotify\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
     }
    ],
    "source": [
@@ -66,8 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -154,14 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.313118\n",
+      "loss: 2.322405\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -196,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -245,7 +243,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
@@ -273,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
@@ -310,7 +312,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# evaluate on test set\n",
@@ -323,7 +327,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Visualize the learned weights for each class\n",
