Implement gradient for softmax

--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -20,20 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The jupyternotify extension is already loaded. To reload it, use:\n",
-      "  %reload_ext jupyternotify\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
+     "data": {
+      "application/javascript": [
+       "if (!(\"Notification\" in window)) {\n",
+       "    alert(\"This browser does not support desktop notifications, so the %%notify magic will not work.\");\n",
+       "} else if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {\n",
+       "    Notification.requestPermission(function (permission) {\n",
+       "        if(!('permission' in Notification)) {\n",
+       "            Notification.permission = permission;\n",
+       "        }\n",
+       "    })\n",
+       "}\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.322405\n",
+      "loss: 2.545539\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -200,26 +210,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: -0.114703 analytic: -10.589114, relative error: 9.785679e-01\n",
-      "numerical: -1.404885 analytic: -10.589114, relative error: 7.657354e-01\n",
-      "numerical: -2.483817 analytic: -10.589114, relative error: 6.200061e-01\n",
-      "numerical: 0.886709 analytic: -10.589114, relative error: 1.000000e+00\n",
-      "numerical: 0.679301 analytic: -10.589114, relative error: 1.000000e+00\n",
-      "numerical: 1.606436 analytic: -10.589114, relative error: 1.000000e+00\n",
-      "numerical: -0.836461 analytic: -10.589114, relative error: 8.535809e-01\n",
-      "numerical: 0.748770 analytic: -10.589114, relative error: 1.000000e+00\n",
-      "numerical: 0.985442 analytic: -10.589114, relative error: 1.000000e+00\n",
-      "numerical: 0.504513 analytic: -10.589114, relative error: 1.000000e+00\n",
-      "numerical: -1.531485 analytic: -10.586793, relative error: 7.472438e-01\n",
-      "numerical: -0.759492 analytic: -10.587567, relative error: 8.661341e-01\n",
-      "numerical: 0.204135 analytic: -10.582394, relative error: 1.000000e+00\n",
-      "numerical: 1.492809 analytic: -10.598859, relative error: 1.000000e+00\n",
-      "numerical: 0.828553 analytic: -10.583258, relative error: 1.000000e+00\n",
-      "numerical: -0.394561 analytic: -10.569631, relative error: 9.280274e-01\n",
-      "numerical: -0.309265 analytic: -10.579253, relative error: 9.431944e-01\n",
-      "numerical: -0.386979 analytic: -10.607534, relative error: 9.296051e-01\n",
-      "numerical: -2.135942 analytic: -10.592287, relative error: 6.643772e-01\n",
-      "numerical: -0.206158 analytic: -10.599564, relative error: 9.618428e-01\n"
+      "numerical: 9.298442 analytic: 9.298446, relative error: 1.797343e-07\n",
+      "numerical: 9.350345 analytic: 9.350347, relative error: 1.233351e-07\n",
+      "numerical: 7.156868 analytic: 7.156870, relative error: 1.562728e-07\n",
+      "numerical: 9.251764 analytic: 9.251768, relative error: 2.180627e-07\n",
+      "numerical: 9.493988 analytic: 9.493990, relative error: 9.376017e-08\n",
+      "numerical: 6.605116 analytic: 6.605119, relative error: 2.611235e-07\n",
+      "numerical: 6.537832 analytic: 6.537834, relative error: 2.190593e-07\n",
+      "numerical: -5.188826 analytic: -5.188821, relative error: 4.799438e-07\n",
+      "numerical: 5.648543 analytic: 5.648544, relative error: 1.207708e-07\n",
+      "numerical: -11.675587 analytic: -11.675579, relative error: 3.093167e-07\n",
+      "numerical: 4.672187 analytic: 4.672189, relative error: 1.740090e-07\n",
+      "numerical: 5.237504 analytic: 5.237505, relative error: 1.609112e-07\n",
+      "numerical: 2.726806 analytic: 2.726811, relative error: 9.271539e-07\n",
+      "numerical: 0.564773 analytic: 0.564778, relative error: 4.116181e-06\n",
+      "numerical: 4.618258 analytic: 4.618260, relative error: 2.783045e-07\n",
+      "numerical: 3.071890 analytic: 3.071893, relative error: 5.536625e-07\n",
+      "numerical: 4.051496 analytic: 4.051500, relative error: 4.950455e-07\n",
+      "numerical: -4.186229 analytic: -4.186224, relative error: 5.763899e-07\n",
+      "numerical: 8.468529 analytic: 8.468532, relative error: 1.402536e-07\n",
+      "numerical: 9.793129 analytic: 9.793131, relative error: 1.166534e-07\n"
      ]
     }
    ],
