Implement vectorized grad for softmax

--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -210,26 +210,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 9.298442 analytic: 9.298446, relative error: 1.797343e-07\n",
-      "numerical: 9.350345 analytic: 9.350347, relative error: 1.233351e-07\n",
-      "numerical: 7.156868 analytic: 7.156870, relative error: 1.562728e-07\n",
-      "numerical: 9.251764 analytic: 9.251768, relative error: 2.180627e-07\n",
-      "numerical: 9.493988 analytic: 9.493990, relative error: 9.376017e-08\n",
-      "numerical: 6.605116 analytic: 6.605119, relative error: 2.611235e-07\n",
-      "numerical: 6.537832 analytic: 6.537834, relative error: 2.190593e-07\n",
-      "numerical: -5.188826 analytic: -5.188821, relative error: 4.799438e-07\n",
-      "numerical: 5.648543 analytic: 5.648544, relative error: 1.207708e-07\n",
-      "numerical: -11.675587 analytic: -11.675579, relative error: 3.093167e-07\n",
-      "numerical: 4.672187 analytic: 4.672189, relative error: 1.740090e-07\n",
-      "numerical: 5.237504 analytic: 5.237505, relative error: 1.609112e-07\n",
-      "numerical: 2.726806 analytic: 2.726811, relative error: 9.271539e-07\n",
-      "numerical: 0.564773 analytic: 0.564778, relative error: 4.116181e-06\n",
-      "numerical: 4.618258 analytic: 4.618260, relative error: 2.783045e-07\n",
-      "numerical: 3.071890 analytic: 3.071893, relative error: 5.536625e-07\n",
-      "numerical: 4.051496 analytic: 4.051500, relative error: 4.950455e-07\n",
-      "numerical: -4.186229 analytic: -4.186224, relative error: 5.763899e-07\n",
-      "numerical: 8.468529 analytic: 8.468532, relative error: 1.402536e-07\n",
-      "numerical: 9.793129 analytic: 9.793131, relative error: 1.166534e-07\n"
+      "numerical: -0.520080 analytic: -0.520075, relative error: 3.979034e-06\n",
+      "numerical: 6.763525 analytic: 6.763526, relative error: 1.194378e-07\n",
+      "numerical: 3.170853 analytic: 3.170858, relative error: 6.965789e-07\n",
+      "numerical: 5.029454 analytic: 5.029458, relative error: 3.645042e-07\n",
+      "numerical: -12.287985 analytic: -12.287978, relative error: 2.810755e-07\n",
+      "numerical: 3.737887 analytic: 3.737890, relative error: 3.420428e-07\n",
+      "numerical: 8.678035 analytic: 8.678038, relative error: 1.476310e-07\n",
+      "numerical: -18.046118 analytic: -18.046111, relative error: 1.828183e-07\n",
+      "numerical: 9.283814 analytic: 9.283816, relative error: 1.172510e-07\n",
+      "numerical: 1.715070 analytic: 1.715075, relative error: 1.476605e-06\n",
+      "numerical: -10.154182 analytic: -10.154176, relative error: 2.618243e-07\n",
+      "numerical: 8.348545 analytic: 8.348548, relative error: 1.769502e-07\n",
+      "numerical: -9.548582 analytic: -9.548577, relative error: 2.708950e-07\n",
+      "numerical: 10.065860 analytic: 10.065863, relative error: 1.661514e-07\n",
+      "numerical: -19.899357 analytic: -19.899351, relative error: 1.363421e-07\n",
+      "numerical: 2.904380 analytic: 2.904383, relative error: 5.882963e-07\n",
+      "numerical: 2.229838 analytic: 2.229842, relative error: 8.468532e-07\n",
+      "numerical: 7.771719 analytic: 7.771721, relative error: 1.097479e-07\n",
+      "numerical: 4.671006 analytic: 4.671010, relative error: 3.846472e-07\n",
+      "numerical: 0.058412 analytic: 0.058416, relative error: 3.307039e-05\n"
      ]
     }
    ],
@@ -252,11 +252,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.545539e+00 computed in 0.131705s\n",
+      "vectorized loss: 2.545539e+00 computed in 0.007879s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
