Implement loss and part of gradient descent for neural net

--- a/assignment1/svm.ipynb
+++ b/assignment1/svm.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Run some setup code for this notebook.\n",
@@ -56,7 +58,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
