--- a/assignment1/two_layer_net.ipynb
+++ b/assignment1/two_layer_net.ipynb
@@ -10,8 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A bit of setup\n",
@@ -47,8 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Create a small net and some toy data to check your implementations.\n",
@@ -85,9 +90,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your scores:\n",
+      "[[-0.81233741 -1.27654624 -0.70335995]\n",
+      " [-0.17129677 -1.18803311 -0.47310444]\n",
+      " [-0.51590475 -1.01354314 -0.8504215 ]\n",
+      " [-0.15419291 -0.48629638 -0.52901952]\n",
+      " [-0.00618733 -0.12435261 -0.15226949]]\n",
+      "\n",
+      "correct scores:\n",
+      "[[-0.81233741 -1.27654624 -0.70335995]\n",
+      " [-0.17129677 -1.18803311 -0.47310444]\n",
+      " [-0.51590475 -1.01354314 -0.8504215 ]\n",
+      " [-0.15419291 -0.48629638 -0.52901952]\n",
+      " [-0.00618733 -0.12435261 -0.15226949]]\n",
+      "\n",
+      "Difference between your scores and correct scores:\n",
+      "3.68027207103e-08\n"
+     ]
+    }
+   ],
    "source": [
     "scores = net.loss(X)\n",
     "print('Your scores:')\n",
@@ -118,9 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between your loss and correct loss:\n",
+      "1.79412040779e-13\n"
+     ]
+    }
+   ],
    "source": [
     "loss, _ = net.loss(X, y, reg=0.05)\n",
     "correct_loss = 1.30378789133\n",
@@ -140,9 +181,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W2 grad numerical: [[ -5.13764691e-01   1.67232930e-01   3.04783350e-01]\n",
+      " [  1.95077540e-02  -5.09652182e-03  -4.38074301e-03]\n",
+      " [  2.92229174e-01   1.18896894e-01  -4.32018096e-01]\n",
+      " [ -2.33121075e-01   1.86288200e-01   3.96198312e-02]\n",
+      " [  7.78174796e-01  -3.54233027e-01  -4.41137965e-01]\n",
+      " [  4.28331870e-03   6.65172228e-04   3.02471898e-03]\n",
+      " [ -6.34322094e-03  -3.62741166e-03  -6.72460447e-03]\n",
+      " [  6.17281609e-02  -1.29900489e-01   3.91825078e-02]\n",
+      " [  6.32053946e-01  -8.44023525e-02  -5.66197124e-01]\n",
+      " [  8.89334995e-01  -6.04709348e-01  -2.88551353e-01]]\n",
+      "W2 grad analytic: [[ -5.13764691e-01   1.67232930e-01   3.04783350e-01]\n",
+      " [  1.95077540e-02  -5.09652182e-03  -4.38074302e-03]\n",
+      " [  2.92229174e-01   1.18896894e-01  -4.32018096e-01]\n",
+      " [ -2.33121075e-01   1.86288200e-01   3.96198312e-02]\n",
+      " [  7.78174796e-01  -3.54233027e-01  -4.41137965e-01]\n",
+      " [  4.28331871e-03   6.65172224e-04   3.02471898e-03]\n",
+      " [ -6.34322094e-03  -3.62741166e-03  -6.72460448e-03]\n",
+      " [  6.17281609e-02  -1.29900489e-01   3.91825079e-02]\n",
+      " [  6.32053946e-01  -8.44023525e-02  -5.66197124e-01]\n",
+      " [  8.89334995e-01  -6.04709349e-01  -2.88551353e-01]]\n",
+      "W2 max relative error: 3.440708e-09\n",
+      "b2 grad numerical: [ 0.2099691 -0.1431905 -0.0667786]\n",
+      "b2 grad analytic: [ 0.2099691 -0.1431905 -0.0667786]\n",
+      "b2 max relative error: 4.447635e-11\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.gradient_check import eval_numerical_gradient\n",
     "\n",
@@ -156,6 +230,8 @@
     "for param_name in grads:\n",
     "    f = lambda W: net.loss(X, y, reg=0.05)[0]\n",
     "    param_grad_num = eval_numerical_gradient(f, net.params[param_name], verbose=False)\n",
+    "    print('%s grad numerical: %s' % (param_name, param_grad_num))\n",
+    "    print('%s grad analytic: %s' % (param_name, grads[param_name]))\n",
     "    print('%s max relative error: %e' % (param_name, rel_error(param_grad_num, grads[param_name])))"
    ]
   },
@@ -172,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "net = init_toy_model()\n",
@@ -201,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from cs231n.data_utils import load_CIFAR10\n",
@@ -262,7 +342,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "input_size = 32 * 32 * 3\n",
@@ -297,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the loss function and train / validation accuracies\n",
@@ -319,7 +403,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from cs231n.vis_utils import visualize_grid\n",
@@ -354,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_net = None # store the best model into this \n",
@@ -380,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# visualize the weights of the best network\n",
@@ -400,7 +490,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_acc = (best_net.predict(X_test) == y_test).mean()\n",
