Implement grad descent for neural network

--- a/assignment1/two_layer_net.ipynb
+++ b/assignment1/two_layer_net.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +158,7 @@
      "output_type": "stream",
      "text": [
       "Difference between your loss and correct loss:\n",
-      "1.79412040779e-13\n"
+      "1.79856129989e-13\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -190,30 +190,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W2 grad numerical: [[ -5.13764691e-01   1.67232930e-01   3.04783350e-01]\n",
-      " [  1.95077540e-02  -5.09652182e-03  -4.38074301e-03]\n",
-      " [  2.92229174e-01   1.18896894e-01  -4.32018096e-01]\n",
-      " [ -2.33121075e-01   1.86288200e-01   3.96198312e-02]\n",
-      " [  7.78174796e-01  -3.54233027e-01  -4.41137965e-01]\n",
-      " [  4.28331870e-03   6.65172228e-04   3.02471898e-03]\n",
-      " [ -6.34322094e-03  -3.62741166e-03  -6.72460447e-03]\n",
-      " [  6.17281609e-02  -1.29900489e-01   3.91825078e-02]\n",
-      " [  6.32053946e-01  -8.44023525e-02  -5.66197124e-01]\n",
-      " [  8.89334995e-01  -6.04709348e-01  -2.88551353e-01]]\n",
-      "W2 grad analytic: [[ -5.13764691e-01   1.67232930e-01   3.04783350e-01]\n",
-      " [  1.95077540e-02  -5.09652182e-03  -4.38074302e-03]\n",
-      " [  2.92229174e-01   1.18896894e-01  -4.32018096e-01]\n",
-      " [ -2.33121075e-01   1.86288200e-01   3.96198312e-02]\n",
-      " [  7.78174796e-01  -3.54233027e-01  -4.41137965e-01]\n",
-      " [  4.28331871e-03   6.65172224e-04   3.02471898e-03]\n",
-      " [ -6.34322094e-03  -3.62741166e-03  -6.72460448e-03]\n",
-      " [  6.17281609e-02  -1.29900489e-01   3.91825079e-02]\n",
-      " [  6.32053946e-01  -8.44023525e-02  -5.66197124e-01]\n",
-      " [  8.89334995e-01  -6.04709349e-01  -2.88551353e-01]]\n",
       "W2 max relative error: 3.440708e-09\n",
-      "b2 grad numerical: [ 0.2099691 -0.1431905 -0.0667786]\n",
-      "b2 grad analytic: [ 0.2099691 -0.1431905 -0.0667786]\n",
-      "b2 max relative error: 4.447635e-11\n"
+      "b2 max relative error: 4.447635e-11\n",
+      "b1 max relative error: 2.738421e-09\n",
+      "W1 max relative error: 3.561318e-09\n"
      ]
     }
    ],
@@ -230,8 +210,6 @@
     "for param_name in grads:\n",
     "    f = lambda W: net.loss(X, y, reg=0.05)[0]\n",
     "    param_grad_num = eval_numerical_gradient(f, net.params[param_name], verbose=False)\n",
-    "    print('%s grad numerical: %s' % (param_name, param_grad_num))\n",
-    "    print('%s grad analytic: %s' % (param_name, grads[param_name]))\n",
     "    print('%s max relative error: %e' % (param_name, rel_error(param_grad_num, grads[param_name])))"
    ]
   },
