--- a/assignment1/two_layer_net.ipynb
+++ b/assignment1/two_layer_net.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -358,39 +358,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration 0 / 1000: loss 2.302973\n",
+      "iteration 0 / 1000: loss 2.302998\n",
+      "X.shape (200, 3072)\n",
       "y_pred shape (200,)\n",
+      "X.shape (1000, 3072)\n",
       "y_pred shape (1000,)\n",
-      "iteration 50 / 1000: loss 2.302851\n",
-      "iteration 100 / 1000: loss 2.302329\n",
-      "iteration 150 / 1000: loss 2.301184\n",
-      "iteration 200 / 1000: loss 2.297415\n",
+      "iteration 50 / 1000: loss 2.302839\n",
+      "iteration 100 / 1000: loss 2.302399\n",
+      "iteration 150 / 1000: loss 2.300832\n",
+      "iteration 200 / 1000: loss 2.298326\n",
+      "X.shape (200, 3072)\n",
       "y_pred shape (200,)\n",
+      "X.shape (1000, 3072)\n",
       "y_pred shape (1000,)\n",
-      "iteration 250 / 1000: loss 2.286354\n",
-      "iteration 300 / 1000: loss 2.259155\n",
-      "iteration 350 / 1000: loss 2.178251\n",
-      "iteration 400 / 1000: loss 2.191710\n",
-      "iteration 450 / 1000: loss 2.123418\n",
+      "iteration 250 / 1000: loss 2.280195\n",
+      "iteration 300 / 1000: loss 2.268330\n",
+      "iteration 350 / 1000: loss 2.206050\n",
+      "iteration 400 / 1000: loss 2.178835\n",
+      "iteration 450 / 1000: loss 2.124939\n",
+      "X.shape (200, 3072)\n",
       "y_pred shape (200,)\n",
+      "X.shape (1000, 3072)\n",
       "y_pred shape (1000,)\n",
-      "iteration 500 / 1000: loss 2.120337\n",
-      "iteration 550 / 1000: loss 2.068966\n",
-      "iteration 600 / 1000: loss 2.099730\n",
-      "iteration 650 / 1000: loss 2.019374\n",
-      "iteration 700 / 1000: loss 1.998622\n",
+      "iteration 500 / 1000: loss 2.201314\n",
+      "iteration 550 / 1000: loss 2.098274\n",
+      "iteration 600 / 1000: loss 2.057809\n",
+      "iteration 650 / 1000: loss 2.068776\n",
+      "iteration 700 / 1000: loss 1.996279\n",
+      "X.shape (200, 3072)\n",
       "y_pred shape (200,)\n",
+      "X.shape (1000, 3072)\n",
       "y_pred shape (1000,)\n",
-      "iteration 750 / 1000: loss 2.041732\n",
-      "iteration 800 / 1000: loss 1.933954\n",
-      "iteration 850 / 1000: loss 1.992741\n",
-      "iteration 900 / 1000: loss 1.999531\n",
-      "iteration 950 / 1000: loss 1.998685\n",
+      "iteration 750 / 1000: loss 2.095586\n",
+      "iteration 800 / 1000: loss 2.040625\n",
+      "iteration 850 / 1000: loss 1.974610\n",
+      "iteration 900 / 1000: loss 1.965234\n",
+      "iteration 950 / 1000: loss 1.948583\n",
+      "X.shape (200, 3072)\n",
       "y_pred shape (200,)\n",
+      "X.shape (1000, 3072)\n",
       "y_pred shape (1000,)\n",
-      "X_val.shape (1000, 3072)\n",
+      "X.shape (1000, 3072)\n",
       "y_pred shape (1000,)\n",
-      "Validation accuracy:  0.27\n"
+      "Validation accuracy:  0.288\n"
      ]
     }
    ],
@@ -407,7 +417,6 @@
     "            reg=0.25, verbose=True)\n",
     "\n",
     "# Predict on the validation set\n",
-    "print(\"X_val.shape\", X_val.shape)\n",
     "val_acc = (net.predict(X_val) == y_val).mean()\n",
     "print('Validation accuracy: ', val_acc)\n",
     "\n"
