--- a/assignment1/two_layer_net.ipynb
+++ b/assignment1/two_layer_net.ipynb
@@ -656,20 +656,21 @@
     "\n",
     "# Trial 4\n",
     "\n",
-    "learning_rates = [7.407935e-05]\n",
+    "learning_rates = [7.407935e-04]\n",
     "# for exponent in range(4, 6):\n",
     "#     for _ in range(4):\n",
     "#         learning_rates.append(np.random.uniform(10**(-exponent), 10**(-exponent+1)))\n",
     "\n",
-    "regularization_strengths = [3.782044e+03]\n",
+    "regularization_strengths = [25]\n",
     "# for exponent in range(2, 3):\n",
     "#     for _ in range(3):\n",
     "#         regularization_strengths.append(np.random.uniform(10**(exponent), 10**(exponent+1)))\n",
     "        \n",
-    "hidden_layer_unit_counts = [400]\n",
+    "hidden_layer_unit_counts = [200]\n",
     "print(learning_rates)\n",
     "print(regularization_strengths)\n",
     "epochs = 4\n",
+    "dropout = 0.5\n",
     "\n",
     "# End\n",
     "\n",
@@ -682,7 +683,8 @@
     "def train(hidden_layer_unit_count,\n",
     "           num_iters,\n",
     "           learning_rate,\n",
-    "           regularization_strength):\n",
+    "           regularization_strength,\n",
+    "           dropout=None):\n",
     "    \n",
     "    input_size = 32 * 32 * 3\n",
     "    num_classes = 10\n",
@@ -693,9 +695,13 @@
     "                      num_classes)\n",
     "    # Train the network\n",
     "    stats = net.train(X_train, y_train, X_val, y_val,\n",
-    "                num_iters=num_iters, batch_size=200,\n",
-    "                learning_rate=learning_rate, learning_rate_decay=0.95,\n",
-    "                reg=regularization_strength, verbose=True)\n",
+    "                      num_iters=num_iters,\n",
+    "                      batch_size=200,\n",
+    "                      learning_rate=learning_rate, \n",
+    "                      learning_rate_decay=0.95,\n",
+    "                      reg=regularization_strength, \n",
+    "                      verbose=True, \n",
+    "                      dropout=dropout)\n",
     "    return (net, stats)\n",
     "    \n",
     "results = {}\n",
@@ -705,7 +711,8 @@
     "            net, stats = train(hidden_layer_unit_count,\n",
     "                   num_iters,\n",
     "                   learning_rate,\n",
-    "                   regularization_strength)\n",
+    "                   regularization_strength,\n",
+    "                   dropout=dropout)\n",
     "            val_acc = stats['val_acc_history'][-1]    \n",
     "            if best_val_acc < val_acc:\n",
     "                best_val_acc = val_acc\n",
