Update runner code

--- a/assignment1/features.ipynb
+++ b/assignment1/features.ipynb
@@ -893,12 +893,16 @@
     "# model in the best_net variable.                                              #\n",
     "################################################################################\n",
     "def train(hidden_layer_unit_count,\n",
-    "           num_iters,\n",
-    "           learning_rate,\n",
-    "           regularization_strength,\n",
-    "           dropout=None):\n",
+    "          num_iters,\n",
+    "          learning_rate,\n",
+    "          regularization_strength,\n",
+    "          dropout=None,\n",
+    "          input_X_train,\n",
+    "          input_y_train,\n",
+    "          input_X_val,\n",
+    "          input_y_val):\n",
     "    \n",
-    "    input_size = X_train_feats.shape[1]\n",
+    "    input_size = input_X_train.shape[1]\n",
     "    num_classes = 10\n",
     "    \n",
     "    print(f'training with lr: {learning_rate}, reg: {regularization_strength}, and hidden: {hidden_layer_unit_count}')\n",
@@ -906,7 +910,7 @@
     "                      hidden_layer_unit_count,\n",
     "                      num_classes)\n",
     "    # Train the network\n",
-    "    stats = net.train(X_train_feats, y_train, X_val_feats, y_val,\n",
+    "    stats = net.train(input_X_train, input_y_train, input_X_val, input_y_val,\n",
     "                      num_iters=num_iters,\n",
     "                      batch_size=200,\n",
     "                      learning_rate=learning_rate, \n",
@@ -920,13 +924,17 @@
     "                 regularization_strengths,\n",
     "                 learning_rates,\n",
     "                 epochs,\n",
-    "                 dropout):\n",
+    "                 dropout,\n",
+    "                 input_X_train,\n",
+    "                 input_y_train,\n",
+    "                 input_X_val,\n",
+    "                 input_y_val):\n",
     "    best_net = None # store the best model into this \n",
     "    best_stats = None\n",
     "    best_val_acc = -1\n",
     "\n",
     "    batch_size = 200\n",
-    "    num_iters_for_epoch = max(len(X_train_feats) / batch_size, 1)\n",
+    "    num_iters_for_epoch = max(len(input_X_train) / batch_size, 1)\n",
     "    num_iters = int(num_iters_for_epoch * epochs)\n",
     "    results = {}\n",
     "\n",
@@ -934,10 +942,14 @@
     "        for regularization_strength in regularization_strengths:\n",
     "            for learning_rate in learning_rates:\n",
     "                net, stats = train(hidden_layer_unit_count,\n",
-    "                       num_iters,\n",
-    "                       learning_rate,\n",
-    "                       regularization_strength,\n",
-    "                       dropout=dropout)\n",
+    "                                   num_iters,\n",
+    "                                   learning_rate,\n",
+    "                                   regularization_strength,\n",
+    "                                   dropout=dropout,\n",
+    "                                   input_X_train=input_X_train,\n",
+    "                                   input_y_train=input_y_train,\n",
+    "                                   input_X_val=input_X_val,\n",
+    "                                   input_y_val=input_y_val)\n",
     "                val_acc = stats['val_acc_history'][-1]    \n",
     "                if best_val_acc < val_acc:\n",
     "                    best_val_acc = val_acc\n",
