Implement two layer network

--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -371,13 +371,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing svm_loss:\n",
+      "loss:  8.9996027491\n",
+      "dx error:  1.40215660067e-09\n",
+      "\n",
+      "Testing softmax_loss:\n",
+      "loss:  2.3025458445\n",
+      "dx error:  9.38467316199e-09\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "num_classes, num_inputs = 10, 50\n",
@@ -416,13 +430,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing initialization ... \n",
+      "Testing test-time forward pass ... \n",
+      "Testing training loss (no regularization)\n",
+      "Running numeric gradient check with reg =  0.0\n",
+      "W1 relative error: 2.13e-08\n",
+      "W2 relative error: 3.31e-10\n",
+      "b1 relative error: 8.37e-09\n",
+      "b2 relative error: 2.53e-10\n",
+      "Running numeric gradient check with reg =  0.7\n",
+      "W1 relative error: 2.53e-07\n",
+      "W2 relative error: 1.37e-07\n",
+      "b1 relative error: 1.56e-08\n",
+      "b2 relative error: 9.09e-10\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, D, H, C = 3, 5, 50, 7\n",
