--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -527,13 +527,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-2755cc44280a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m##############################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m solver = Solver(model,\n\u001b[0;32m----> 9\u001b[0;31m                 \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m                 \u001b[0mupdate_rule\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sgd'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                 \u001b[0moptim_config\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'learning_rate'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1e-3\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = TwoLayerNet()\n",
     "solver = None\n",
@@ -542,7 +554,15 @@
     "# TODO: Use a Solver instance to train a TwoLayerNet that achieves at least  #\n",
     "# 50% accuracy on the validation set.                                        #\n",
     "##############################################################################\n",
-    "pass\n",
+    "solver = Solver(model,\n",
+    "                data,\n",
+    "                update_rule='sgd',\n",
+    "                optim_config={'learning_rate': 1e-3},\n",
+    "                lr_decay=0.95,\n",
+    "                num_epochs=1,\n",
+    "                batch_size=128,\n",
+    "                print_every=100)\n",
+    "solver.train()\n",
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
     "##############################################################################"
