Add more explanation around why depth in neural networks could complicate learning

--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -953,7 +953,9 @@
     "Did you notice anything about the comparative difficulty of training the three-layer net vs training the five layer net?\n",
     "\n",
     "# Answer:\n",
-    "The training seems to be senstive to the initialization standard deviation scale. My theory behind this is scale of the gradient might be affected by the number of multiplications against the weights based on the depth of the networks.\n"
+    "The training seems to be senstive to the initialization standard deviation scale. My theory behind this is scale of the gradient might be affected by the number of multiplications against the weights based on the depth of the networks.\n",
+    "\n",
+    "Another aspect is probably because of the ddd\n"
    ]
   },
   {
